--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,6 +39,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'Periodicals'
+- GITenberg
 title: 'Chambers''s Edinburgh Journal, No. 450
 
   Volume 18, New Series, August 14, 1852'
